<resources>
    <string name="btn_option">옵션</string>
    <string name="btn_calendar">캘린더</string>
    <string name="btn_write_diary">일기\n쓰기</string>
    <string name="btn_list">목록</string>
    <string name="year_2025">2025년</string>
    <string name="month_january">1월</string>
    <string name="emoji_smile">✅</string>
    <string name="watch_cal">캘린더 보기</string>
    <string name="desc_write_diary">오늘의 일기를 작성하는 버튼</string>
    <string name="year_format">%d년</string>
    <string name="month_format">%d월</string>
    <string name="app_name">Term Project</string>
</resources>